# cc_products

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
cc_products/: __init__.py  __version__.py  baseproduct.py  exceptions.py  functions.py  optiondescriptors.py  options.py  productoptions.py  productrange.py  variation.py
tests/: test_exceptions.py  test_product_range.py
