[tool.poetry]
name = "cc_products"
version = "0.1.0"
description = "\"Work with Cloud Commerce Products.\""
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ccapi = {git = "https://github.com/stcstores/ccapi.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
