[tool.poetry]
name = "cc_products"
version = "0.1.0"
description = "\"Work with Cloud Commerce Products.\""
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ccapi = {git = "https://github.com/stcstores/ccapi.git"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"
isort = "^5.10.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
